package com.enicarthage.emergency.client;

import com.enicarthage.emergency.grpc.*;
import io.grpc.ManagedChannel;
import io.grpc.ManagedChannelBuilder;
import io.grpc.StatusRuntimeException;

import java.util.Iterator;
import java.util.concurrent.TimeUnit;

public class EmergencyClient {

    public static void main(String[] args) {
        System.out.println("\nâ•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—");
        System.out.println("â•‘   ğŸš¨ CLIENT DE TEST - SERVICE URGENCES gRPC ğŸš¨            â•‘");
        System.out.println("â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•\n");

        ManagedChannel channel = ManagedChannelBuilder
                .forAddress("localhost", 9090)
                .usePlaintext()
                .build();

        EmergencyServiceGrpc.EmergencyServiceBlockingStub stub =
                EmergencyServiceGrpc.newBlockingStub(channel);

        try {
            // â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
            // Test 1: CrÃ©er une alerte d'ACCIDENT
            // â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
            System.out.println("â•".repeat(60));
            System.out.println("ğŸš— TEST 1 : CrÃ©er une alerte d'ACCIDENT");
            System.out.println("â•".repeat(60));

            Location location = Location.newBuilder()
                    .setLatitude(36.8065)
                    .setLongitude(10.1815)
                    .setAddress("Avenue Habib Bourguiba, Tunis")
                    .setZone("Centre")
                    .build();

            AlertRequest request = AlertRequest.newBuilder()
                    .setType(EmergencyType.ACCIDENT)
                    .setPriority(Priority.HIGH)
                    .setDescription("Collision entre deux voitures - 3 blessÃ©s")
                    .setLocation(location)
                    .setReporterName("Ahmed Ben Ali")
                    .setReporterPhone("+216 20 123 456")
                    .build();

            AlertResponse response = stub.createAlert(request);
            System.out.println("âœ… Alerte crÃ©Ã©e avec succÃ¨s !");
            System.out.println("   ğŸ“‹ ID Alerte     : " + response.getAlertId());
            System.out.println("   ğŸš¨ Type          : " + response.getType());
            System.out.println("   âš ï¸  PrioritÃ©      : " + response.getPriority());
            System.out.println("   ğŸ“Š Statut        : " + response.getStatus());
            System.out.println("   ğŸ“ Zone          : " + response.getLocation().getZone());

            // Sauvegarder l'ID pour les tests suivants
            String alertId = response.getAlertId();

            // Pause pour simulation rÃ©aliste
            Thread.sleep(2000);

            // â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
            // Test 2: Dispatcher une Ã©quipe d'urgence
            // â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
            System.out.println("\n" + "â•".repeat(60));
            System.out.println("ğŸš‘ TEST 2 : Dispatcher une Ã©quipe d'urgence");
            System.out.println("â•".repeat(60));

            DispatchRequest dispatchRequest = DispatchRequest.newBuilder()
                    .setAlertId(alertId)
                    .setTeamId("TEAM-URGENCE-01")
                    .setEstimatedArrivalTime(8)
                    .build();

            DispatchResponse dispatchResponse = stub.dispatchTeam(dispatchRequest);

            if (dispatchResponse.getSuccess()) {
                System.out.println("âœ… Ã‰quipe dispatchÃ©e avec succÃ¨s !");
                System.out.println("   ğŸš‘ Ã‰quipe        : " + dispatchResponse.getTeamId());
                System.out.println("   â±ï¸  ETA          : " + dispatchResponse.getEstimatedArrivalTime() + " minutes");
                System.out.println("   ğŸ’¬ Message       : " + dispatchResponse.getMessage());
            } else {
                System.out.println("âŒ Ã‰chec du dispatch : " + dispatchResponse.getMessage());
            }

            Thread.sleep(2000);

            // â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
            // Test 3: VÃ©rifier le statut de l'alerte
            // â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
            System.out.println("\n" + "â•".repeat(60));
            System.out.println("ğŸ“Š TEST 3 : VÃ©rifier le statut de l'alerte");
            System.out.println("â•".repeat(60));

            AlertStatusRequest statusRequest = AlertStatusRequest.newBuilder()
                    .setAlertId(alertId)
                    .build();

            AlertResponse statusResponse = stub.getAlertStatus(statusRequest);
            System.out.println("âœ… Statut rÃ©cupÃ©rÃ© avec succÃ¨s !");
            System.out.println("   ğŸ“‹ ID Alerte     : " + statusResponse.getAlertId());
            System.out.println("   ğŸ“Š Statut actuel : " + statusResponse.getStatus());
            System.out.println("   ğŸš‘ Ã‰quipe        : " + statusResponse.getAssignedTeam());
            System.out.println("   â±ï¸  ETA          : " + statusResponse.getEstimatedArrivalTime() + " min");

            Thread.sleep(2000);

            // â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
            // Test 4: Mettre Ã  jour le statut - Ã‰quipe en route
            // â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
            System.out.println("\n" + "â•".repeat(60));
            System.out.println("ğŸ”„ TEST 4 : Mise Ã  jour - Ã‰quipe en route");
            System.out.println("â•".repeat(60));

            UpdateStatusRequest updateRequest1 = UpdateStatusRequest.newBuilder()
                    .setAlertId(alertId)
                    .setNewStatus(AlertStatus.DISPATCHED)
                    .setNotes("L'Ã©quipe URGENCE-01 est en route vers le lieu de l'accident")
                    .build();

            AlertResponse updatedResponse1 = stub.updateAlertStatus(updateRequest1);
            System.out.println("âœ… Statut mis Ã  jour !");
            System.out.println("   ğŸ“Š Ancien statut : PENDING");
            System.out.println("   ğŸ“Š Nouveau statut: " + updatedResponse1.getStatus());
            System.out.println("   ğŸ’¬ Notes         : L'Ã©quipe est en route");

            Thread.sleep(3000);

            // â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
            // Test 5: Mettre Ã  jour le statut - Intervention en cours
            // â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
            System.out.println("\n" + "â•".repeat(60));
            System.out.println("ğŸ”„ TEST 5 : Mise Ã  jour - Intervention EN COURS");
            System.out.println("â•".repeat(60));

            UpdateStatusRequest updateRequest2 = UpdateStatusRequest.newBuilder()
                    .setAlertId(alertId)
                    .setNewStatus(AlertStatus.IN_PROGRESS)
                    .setNotes("Ã‰quipe arrivÃ©e sur place - Prise en charge des blessÃ©s en cours")
                    .build();

            AlertResponse updatedResponse2 = stub.updateAlertStatus(updateRequest2);
            System.out.println("âœ… Statut mis Ã  jour !");
            System.out.println("   ğŸ“Š Ancien statut : DISPATCHED");
            System.out.println("   ğŸ“Š Nouveau statut: " + updatedResponse2.getStatus());
            System.out.println("   ğŸ’¬ Notes         : Intervention en cours");
            System.out.println("   ğŸ‘¨â€âš•ï¸ Action       : Prise en charge des 3 blessÃ©s");

            Thread.sleep(3000);

            // â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
            // Test 6: Mettre Ã  jour le statut - Urgence RÃ‰SOLUE
            // â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
            System.out.println("\n" + "â•".repeat(60));
            System.out.println("ğŸ”„ TEST 6 : Mise Ã  jour - Urgence RÃ‰SOLUE");
            System.out.println("â•".repeat(60));

            UpdateStatusRequest updateRequest3 = UpdateStatusRequest.newBuilder()
                    .setAlertId(alertId)
                    .setNewStatus(AlertStatus.RESOLVED)
                    .setNotes("BlessÃ©s transportÃ©s Ã  l'hÃ´pital Charles Nicolle - Situation sous contrÃ´le")
                    .build();

            AlertResponse updatedResponse3 = stub.updateAlertStatus(updateRequest3);
            System.out.println("âœ… Statut mis Ã  jour !");
            System.out.println("   ğŸ“Š Ancien statut : IN_PROGRESS");
            System.out.println("   ğŸ“Š Nouveau statut: " + updatedResponse3.getStatus());
            System.out.println("   ğŸ’¬ Notes         : Urgence rÃ©solue");
            System.out.println("   ğŸ¥ Destination   : HÃ´pital Charles Nicolle");
            System.out.println("   âœ… RÃ©sultat      : Situation sous contrÃ´le");

            Thread.sleep(2000);

            // â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
            // Test 7: CrÃ©er d'autres alertes pour tester le streaming
            // â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
            System.out.println("\n" + "â•".repeat(60));
            System.out.println("â• TEST 7 : CrÃ©er des alertes supplÃ©mentaires");
            System.out.println("â•".repeat(60));

            // Alerte INCENDIE
            Location locationFire = Location.newBuilder()
                    .setLatitude(36.8520)
                    .setLongitude(10.1960)
                    .setAddress("Rue de Marseille, Tunis")
                    .setZone("Nord")
                    .build();

            AlertRequest fireRequest = AlertRequest.newBuilder()
                    .setType(EmergencyType.FIRE)
                    .setPriority(Priority.CRITICAL)
                    .setDescription("Incendie dans un immeuble de 5 Ã©tages")
                    .setLocation(locationFire)
                    .setReporterName("Fatma Mejri")
                    .setReporterPhone("+216 22 987 654")
                    .build();

            AlertResponse fireResponse = stub.createAlert(fireRequest);
            System.out.println("ğŸ”¥ Alerte INCENDIE crÃ©Ã©e : " + fireResponse.getAlertId());

            Thread.sleep(1000);

            // Alerte MÃ‰DICALE
            Location locationMedical = Location.newBuilder()
                    .setLatitude(36.7500)
                    .setLongitude(10.2300)
                    .setAddress("Avenue de la LibertÃ©, Ariana")
                    .setZone("Sud")
                    .build();

            AlertRequest medicalRequest = AlertRequest.newBuilder()
                    .setType(EmergencyType.MEDICAL)
                    .setPriority(Priority.CRITICAL)
                    .setDescription("Personne en arrÃªt cardiaque - 65 ans")
                    .setLocation(locationMedical)
                    .setReporterName("Mohamed Trabelsi")
                    .setReporterPhone("+216 98 456 123")
                    .build();

            AlertResponse medicalResponse = stub.createAlert(medicalRequest);
            System.out.println("ğŸ¥ Alerte MÃ‰DICALE crÃ©Ã©e : " + medicalResponse.getAlertId());

            Thread.sleep(2000);

            // â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
            // Test 8: Streaming - Lister toutes les alertes actives
            // â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
            System.out.println("\n" + "â•".repeat(60));
            System.out.println("ğŸ“¡ TEST 8 : Streaming des alertes actives");
            System.out.println("â•".repeat(60));

            EmptyRequest emptyRequest = EmptyRequest.newBuilder().build();
            Iterator<AlertResponse> activeAlerts = stub.streamActiveAlerts(emptyRequest);

            int alertCount = 0;
            System.out.println("\nğŸ“‹ Liste des alertes actives :");
            System.out.println("â”€".repeat(60));

            while (activeAlerts.hasNext()) {
                alertCount++;
                AlertResponse alert = activeAlerts.next();

                System.out.println("\nğŸš¨ Alerte #" + alertCount);
                System.out.println("   ID               : " + alert.getAlertId());
                System.out.println("   Type             : " + alert.getType());
                System.out.println("   PrioritÃ©         : " + alert.getPriority());
                System.out.println("   Statut           : " + alert.getStatus());
                System.out.println("   Description      : " + alert.getDescription());
                System.out.println("   Zone             : " + alert.getLocation().getZone());
                System.out.println("   SignalÃ© par      : " + alert.getReporterName());

                if (!alert.getAssignedTeam().isEmpty()) {
                    System.out.println("   Ã‰quipe assignÃ©e  : " + alert.getAssignedTeam());
                    System.out.println("   ETA              : " + alert.getEstimatedArrivalTime() + " min");
                }
                System.out.println("â”€".repeat(60));
            }

            System.out.println("\nâœ… Streaming terminÃ© - Total : " + alertCount + " alerte(s) active(s)");

            // â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
            // RÃ©sumÃ© final
            // â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
            System.out.println("\n" + "â•".repeat(60));
            System.out.println("ğŸ“Š RÃ‰SUMÃ‰ DES TESTS");
            System.out.println("â•".repeat(60));
            System.out.println("âœ… Test 1 : CrÃ©ation d'alerte              â†’ OK");
            System.out.println("âœ… Test 2 : Dispatch d'Ã©quipe              â†’ OK");
            System.out.println("âœ… Test 3 : VÃ©rification du statut         â†’ OK");
            System.out.println("âœ… Test 4 : Update DISPATCHED              â†’ OK");
            System.out.println("âœ… Test 5 : Update IN_PROGRESS             â†’ OK");
            System.out.println("âœ… Test 6 : Update RESOLVED                â†’ OK");
            System.out.println("âœ… Test 7 : CrÃ©ation alertes multiples     â†’ OK");
            System.out.println("âœ… Test 8 : Streaming alertes actives      â†’ OK");
            System.out.println("â•".repeat(60));

            System.out.println("\nğŸ‰ TOUS LES TESTS SONT TERMINÃ‰S AVEC SUCCÃˆS ! ğŸ‰\n");

        } catch (StatusRuntimeException e) {
            System.err.println("âŒ Erreur gRPC: " + e.getStatus());
            e.printStackTrace();
        } catch (InterruptedException e) {
            System.err.println("âŒ Erreur d'interruption: " + e.getMessage());
            Thread.currentThread().interrupt();
        } finally {
            try {
                System.out.println("\nğŸ”Œ Fermeture de la connexion gRPC...");
                channel.shutdown().awaitTermination(5, TimeUnit.SECONDS);
                System.out.println("âœ… Connexion fermÃ©e proprement.\n");
            } catch (InterruptedException e) {
                System.err.println("âŒ Erreur lors de la fermeture: " + e.getMessage());
                Thread.currentThread().interrupt();
            }
        }
    }
}